--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ debugpy==1.8.9
 decorator==5.1.1
 executing==2.1.0
 Flask==3.1.0
+flask-marshmallow==1.2.1
 fonttools==4.54.1
 greenlet==3.1.1
 iniconfig==2.0.0
@@ -26,6 +27,7 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
 MarkupSafe==3.0.2
+marshmallow==3.23.1
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
