--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cryptography==43.0.3
 cycler==0.12.1
 debugpy==1.8.9
 decorator==5.1.1
+dnspython==2.7.0
 executing==2.1.0
 Flask==3.1.0
 flask-marshmallow==1.2.1
@@ -45,6 +46,7 @@ psycopg2==2.9.10
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.18.0
+pymongo==4.10.1
 PyMySQL==1.1.1
 pyodbc==5.2.0
 pyparsing==3.2.0
