--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ pyodbc==5.2.0
 pyparsing==3.2.0
 pytest==8.3.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 pywin32==308
 pyzmq==26.2.0
