--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ decorator==5.1.1
 dnspython==2.7.0
 executing==2.1.0
 Flask==3.1.0
+Flask-Cors==5.0.0
 flask-marshmallow==1.2.1
 fonttools==4.54.1
 greenlet==3.1.1
